--- a/Laba1/Form2.resx
+++ b/Laba1/Form2.resx
@@ -120,4 +120,7 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="Home_InitializeOpenFile_Text_files___txt" xml:space="preserve">
+    <value>Text files|*.txt</value>
+  </data>
 </root>
